<resources>
    <string name="app_name">TaskMaster</string>
    <string name="title_home">Home</string>
    <string name="login">Login</string>
    <string name="login_forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_profile">Profile</string>
    <string name="title_group">Groups</string>
    <string name="title_list">Lists</string>
    <string name="application_name">TaskMaster</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="members">Members</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="repeat">Repeat</string>
    <string name="ort">Ort</string>
    <string name="title">Title</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="no_deadline">Deadline is not set</string>
    <string name="version">VERSION: %d (%d)</string>
    <string name="deadline_placeholders">Deadline: %1$d/%2$d/%3$d</string>
    <string name="select">Select</string>
    <string name="reset">Reset</string>
    <string name="no_place">No place</string>
    <string name="no_group">No Group</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="remember_me">Remember me</string>
    <string name="login_failed">Login failed. Username / Email or password is wrong.</string>
    <string name="see_profile">See Profile</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="enable_disable_notifications">Enable / Disable Notifications</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="never">Never</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_details">Account details</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="tasks_done">%d / %d tasks done</string>
    <string name="done">Done</string>
    <string name="add_edit">Add / Edit</string>
    <string name="channel_name">TaskMasterNotifications</string>
    <string name="channel_description">The Channel delivering notifications to the user</string>
    <string name="rotate">Rotate</string>
</resources>