<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="de.taskmaster.activity.app.ui.profile.settings.AccountSettingsViewModel" />

        <variable
            name="addHandler"
            type="de.taskmaster.model.handler.AddressEditorHandler" />

        <variable
            name="handler"
            type="de.taskmaster.model.handler.NavigationHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <include
            layout="@layout/component_image_editor"
            app:handler="@{handler}"
            app:model="@{model}" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={model.firstName}" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={model.lastName}" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@={model.email}" />

        <include
            layout="@layout/component_address_editor"
            app:addHandler="@{addHandler}" />

        <Button
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/warning"
            android:text="@string/delete_account" />
    </LinearLayout>
</layout>