<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="de.taskmaster.BuildConfig" />

        <variable
            name="model"
            type="de.taskmaster.activity.app.ui.profile.ProfilePrivateViewModel" />

        <variable
            name="handler"
            type="de.taskmaster.model.handler.NavigationHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:text="@{model.getDisplayableName()}"
                    app:layout_constraintStart_toEndOf="@id/profile_picture"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/visit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:onClick="@{() -> handler.toPublicProfile()}"
                    android:text="@string/see_profile"
                    android:textColor="@color/link"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/profile_picture"
                    app:layout_constraintTop_toBottomOf="@id/profile_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/account_settings"
                    android:textAllCaps="true"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/account_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_button"
                    android:drawableEnd="@drawable/person_outlined"
                    android:drawableTint="@color/Secondary"
                    android:onClick="@{() -> handler.toAccountSetting()}"
                    android:padding="12dp"
                    android:text="@string/account_details"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="@dimen/subtitle" />

                <Button
                    android:id="@+id/notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_button"
                    android:drawableEnd="@drawable/notification"
                    android:drawablePadding="16dp"
                    android:drawableTint="@color/Secondary"
                    android:onClick="@{() -> handler.toNotifications()}"
                    android:padding="12dp"
                    android:text="@string/notifications"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="@dimen/subtitle" />

                <Button
                    android:id="@+id/sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_button"
                    android:onClick="@{() -> handler.logout()}"
                    android:padding="12dp"
                    android:text="@string/sign_out"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textSize="@dimen/subtitle" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>