<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.taskmaster.activity.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="de.taskmaster.activity.app.ui.list.ListOverviewFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_lists_overview">
        <action
            android:id="@+id/action_navigation_list_to_listEditorFragment"
            app:destination="@id/list_editor">
            <argument
                android:name="id"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_navigation_list_to_taskoverview"
            app:destination="@id/taskOverview">
            <argument
                android:name="id"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_group"
        android:name="de.taskmaster.activity.app.ui.group.GroupOverviewFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_lists_overview">
        <action
            android:id="@+id/action_navigation_group_to_groupEditorFragment"
            app:destination="@id/group_editor">
            <argument
                android:name="groupId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="de.taskmaster.activity.app.ui.profile.ProfilePrivateFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_private">
        <action
            android:id="@+id/action_navigation_profile_to_accountSettings"
            app:destination="@id/accountSettings" />
        <action
            android:id="@+id/action_navigation_profile_to_notificationSettings"
            app:destination="@id/notification_settings" />
        <action
            android:id="@+id/action_navigation_profile_to_publicProfileFragment"
            app:destination="@id/publicProfileFragment">
            <argument
                android:name="userId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/accountSettings"
        android:name="de.taskmaster.activity.app.ui.profile.settings.AccountSettingsFragment"
        android:label="AccountSettings"
        tools:layout="@layout/fragment_profile_edit" />

    <fragment
        android:id="@+id/notification_settings"
        android:name="de.taskmaster.activity.app.ui.profile.notification.AccountNotificationSettings"
        android:label="NotificationSettings"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/list_editor"
        android:name="de.taskmaster.activity.app.ui.list.edit.ListEditorFragment"
        android:label="ListEditorFragment"
        tools:layout="@layout/fragment_list_edit" />

    <fragment
        android:id="@+id/group_editor"
        android:name="de.taskmaster.activity.app.ui.group.editor.GroupEditorFragment"
        android:label="GroupEditorFragment"
        tools:layout="@layout/fragment_group_edit">
        <action
            android:id="@+id/action_group_editor_to_taskOverview"
            app:destination="@id/taskOverview" />
        <action
            android:id="@+id/action_group_editor_to_list_editor"
            app:destination="@id/list_editor" />
    </fragment>

    <fragment
        android:id="@+id/publicProfileFragment"
        android:name="de.taskmaster.activity.app.ui.profile.ProfilePublicFragment"
        android:label="PublicProfileFragment"
        tools:layout="@layout/fragment_profile_public" />

    <fragment
        android:id="@+id/taskOverview"
        android:name="de.taskmaster.activity.app.ui.task.TaskOverview"
        android:label="ListDetailsFragment"
        tools:layout="@layout/fragment_tasks_overview">
        <action
            android:id="@+id/action_taskOverview_to_taskEditorFragment"
            app:destination="@id/taskEditorFragment">
            <argument
                android:name="taskId"
                app:argType="integer" />
            <argument
                android:name="listId"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/taskEditorFragment"
        android:name="de.taskmaster.activity.app.ui.task.editor.TaskEditorFragment"
        android:label="TaskEditorFragment"
        tools:layout="@layout/items_task" />

</navigation>